# distributed-systems

./: .gitignore
01/chat-application/: settings.gradle.kts
01/chat-application-server/: .gitignore  build.gradle.kts
01/chat-application/client/: build.gradle.kts  settings.gradle.kts
01/chat-application/server/: .gitignore  build.gradle.kts  settings.gradle.kts
01/lab_gniazda/: JavaTcpClient.java  JavaTcpServer.java  JavaUdpClient.java  JavaUdpServer.java  PythonUdpClient.py
01/lab_gniazda/chat/: .gitignore  build.gradle.kts
01/lab_gniazda/zadanie1/src/: Client.java  Server.java
01/lab_gniazda/zadanie2/src/: Client.py  Server.java
02/: oswiadczenie.txt
02/client/: pom.xml
02/demo/: pom.xml
02/rest/: .gitignore  package-lock.json  package.json
02/rest/src/: app.ts  datamanager.ts  geolocation.ts  openweather.ts  rapidapi.ts  types.d.ts  utils.ts
02/rest/views/: error.pug  result.pug
03/hometask/admin/: settings.gradle.kts
03/hometask/client/: settings.gradle.kts
03/lab_rabbitmq/: Z1_Consumer.java  Z1_Producer.java  Z2_Consumer.java  Z2_Producer.java  runconfig-Z1_Consumer.sh  runconfig-Z1_Producer.sh  runconfig-Z2_Consumer.sh  runconfig-Z2_Producer.sh
04/hometask/: settings.gradle.kts
04/hometask/report/: task-1.txt
04/reactive-streams/app/: build.gradle.kts
04/reactive-streams/report/: task-2.txt
05/hometask/client-py/: compile-slice.sh
05/practice/app/: Cargo.toml  build.rs
05/practice/app/interfaces/: messages.proto
05/practice/app/src/: client.rs  server.rs
06/project/: .gitignore
06/project/watcher/: settings.gradle
(+124 files in other folders)
