[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.7.2"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"]}
prost = "0.10.4"

[build-dependencies]
protoc-rust-grpc = "0.8.3"
tonic-build = "0.7.2"

[[bin]]
    name = "server"
    path = "src/server.rs"

[[bin]]
    name = "client"
    path = "src/client.rs"